# Mashup-Benchmark

./: .gitignore  LICENSE-DATA  NOTICE  README.md  README_EN.md  pyproject.toml
data/tasks/: mashup_benchmark.jsonl
docs/: benchmark_spec.md  data_card.md  metrics.md  run_submission_format.md  vlm_judge_rubric.md
eval/: README.md  __init__.py  aggregate_scores.py  config.example.yaml  config.py  media.py  run_evaluation.py
eval/evaluators/: __init__.py  vlm_judge.py
eval/metrics/: __init__.py  alignment.py
manifests/: audios.json  summary.json  tasks.jsonl  videos.json
runs/: README.md
schemas/: benchmark_task.schema.json  evaluation_score.schema.json  run_manifest.schema.json  run_output.schema.json
scripts/: run_cutclaw.py  run_videoagent.py  validate_benchmark.py  validate_run.py
